@@ -958,6 +958,8 @@ namespace MySql.Data.MySqlClient
                     throw new MySqlException(Resources.Timeout);
                 if (ex.Number == 0)
                     throw new MySqlException(Resources.FatalErrorReadingResult, ex);
+                if ((Behavior & CommandBehavior.CloseConnection) != 0)
+                    Close();
                 throw;
             }
 
