@@ -442,6 +442,29 @@ namespace MySql.Data.MySqlClient.Tests
             {
             }
         }
+
+        /// <summary>
+        /// Bug #58652	ExecuteReader throws NullReferenceException when using CommandBehavior.Close
+        /// </summary>
+        [Test]
+        public void SyntaxErrorWithCloseConnection()
+        {
+            string connStr = GetConnectionString(true);
+            using (MySqlConnection c = new MySqlConnection(connStr))
+            {
+                c.Open();
+                MySqlCommand cmd = new MySqlCommand("SELE 1", c);
+                try
+                {
+                    cmd.ExecuteReader(CommandBehavior.CloseConnection);
+                    Assert.Fail();
+                }
+                catch (MySqlException)
+                {
+                }
+                Assert.IsTrue(c.State == ConnectionState.Closed);
+            }
+        }
     }
 
 
